--- a/packages/protpl/package.json
+++ b/packages/protpl/package.json
@@ -23,12 +23,19 @@
     "uglify-js": "^3.6.0"
   },
   "dependencies": {
+    "axios": "^0.19.2",
+    "chalk": "^3.0.0",
     "command-line-usage": "^6.1.0",
     "enquirer": "^2.3.4",
     "fs-extra": "^8.1.0",
     "globby": "^11.0.0",
     "minimist": "^1.2.0",
+    "ora": "^4.0.3",
+    "semver": "^7.1.3",
     "tar": "^6.0.1"
+  },
+  "engines": {
+    "node": ">=8.0.0"
   },
   "author": "echosoar",
   "license": "MIT"
