--- a/packages/protpl-ts-module/tsconfig.json
+++ b/packages/protpl-ts-module/tsconfig.json
@@ -1,7 +1,7 @@
 {
   "compileOnSave": true,
   "compilerOptions": {
-    "target": "ES2015",
+    "target": "es2018",
     "module":"commonjs",
     "moduleResolution": "node",
     "removeComments": true,
@@ -14,7 +14,7 @@
     "pretty": true,
     "declaration": true,
     "outDir": "dist",
-    "lib": ["es2015", "dom"]
+    "lib": ["es2018"]
   },
   "exclude": [
     "dist",
